# AnimeForAll

./: AFA  AnimeForAll.cpp  AnimeForAll.h  AnimeForAll.ui  AnimeForAll_ui.h  CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  LoginWindow_ui.h  build.sh
